# sure-client-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  openapi.yaml
.github/: docker-compose.yaml
.github/workflows/: actionlint.yaml  ci.yaml  toml.yaml
examples/: accounts.rs  auth.rs  categories.rs  chats.rs  merchants.rs  sync.rs  transactions.rs  usage.rs
src/: error.rs  lib.rs  serde.rs  types.rs
src/client/: accounts.rs  auth.rs  categories.rs  chats.rs  core.rs  merchants.rs  mod.rs  sync.rs  transactions.rs  usage.rs  valuations.rs
src/models/: account.rs  auth.rs  category.rs  chat.rs  merchant.rs  mod.rs  sync.rs  transaction.rs  usage.rs  valuation.rs
tests/: integration_accounts.rs  integration_categories.rs  integration_merchants.rs  integration_other.rs  integration_transactions.rs  integration_valuations.rs
